--- a/doc/platforms.texi
+++ b/doc/platforms.texi
@@ -6,10 +6,11 @@ alpha-dec-osf3.2             cc        0.8       ok
 alpha-dec-osf3.2             gcc       0.8       ok
 alpha-dec-osf4.0             cc        0.9       ok
 alpha-dec-osf4.0             gcc       0.9       ok
-alpha-unknown-linux          gcc       0.9d      ok
+alpha-unknown-linux          gcc       0.9h      ok
 hppa1.1-hp-hpux9.05          cc        0.8       ok
 hppa1.1-hp-hpux9.05          gcc       0.8       ok
-hppa1.1-hp-hpux10.10         cc        0.8       ok
+hppa1.1-hp-hpux10.10         cc        0.9h      ok
+hppa1.1-hp-hpux10.10         gcc       0.9h      ok
 i386-unknown-freebsd2.1.5    gcc       0.5       ok
 i386-unknown-gnu0.0          gcc       0.5       ok
 i386-unknown-netbsd1.2       gcc       0.9g      ok
@@ -21,17 +22,17 @@ mips-sgi-irix6.2             cc -32    0.9       ok
 mips-sgi-irix6.2             cc -n32   0.9       ok
 powerpc-ibm-aix4.1.4.0       xlc       0.9g      ok
 powerpc-ibm-aix4.1.4.0       gcc       0.9g      ok
-rs6000-ibm-aix3.2.5          xlc       0.9e      ok
-rs6000-ibm-aix3.2.5          gcc       0.9e      ok*
+rs6000-ibm-aix3.2.5          xlc       0.9h      ok
+rs6000-ibm-aix3.2.5          gcc       0.9h      ok*
 rs6000-ibm-aix4.1.4.0        xlc       0.9g      ok
 rs6000-ibm-aix4.1.4.0        gcc       0.9e      ok
-sparc-sun-linux2.1.23        gcc       0.9       ok
-sparc-sun-sunos4.1.3_U1      cc        0.9       ok
-sparc-sun-sunos4.1.3_U1      gcc       0.9       ok
+sparc-sun-linux2.1.23        gcc       0.9h      ok
+sparc-sun-sunos4.1.3         cc        0.9h      ok
+sparc-sun-sunos4.1.3         gcc       0.9h      ok
 sparc-sun-solaris2.4         cc        0.9       ok
 sparc-sun-solaris2.4         gcc       0.9       ok
 sparc-sun-solaris2.5         cc        0.9       ok
-sparc-sun-solaris2.5         gcc       0.9g      ok
+sparc-sun-solaris2.5         gcc       0.9h      ok
 --------------------------------------------------------
 
 * Libtool will not build shared libraries because of a bug in
