--- a/TODO
+++ b/TODO
@@ -1,17 +1,16 @@
+* Another form of convenience library, suggested by Alexandre Oliva,
+is to have undocumented utility libraries, where only the shared
+version is installed.
+
 * A better check to detect broken collect2 on AIX, once the bug is
 fixed in GCC.
 
 * We could use libtool object convenience libraries that resolve
 symbols to be included in a libtool archive.
 
-* Another form of convenience library, suggested by Alexandre Oliva,
-is to have undocumented utility libraries, where only the shared
-version is installed.
-
-* Finish up the dlname mode, and get it integrated with DLD.  We need
-a way for different major versions of the same .la to coexist.  This
-also involves writing a better uninstall mode, so that nothing
-breaks.
+* Delete dlname mode, and integrate DLD support.  We need a way for
+different major versions of the same .la to coexist.  This also
+involves writing a better uninstall mode, so that nothing breaks.
 
 * Implement full multi-language support.  Currently, this is only for
 C++, but there are beginnings of this in the manual (Other Languages).
