--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS - list of user-visible changes between releases of GNU libtool.
 
-New in 0.9i:
+New in 0.99:
 * Bug fixes.
 * Better configuration test to find the system linker.  The old test
   was failing because people frequently install GNU ld, but don't
