--- a/doc/platforms.texi
+++ b/doc/platforms.texi
@@ -14,25 +14,24 @@ hppa1.1-hp-hpux10.10         gcc       0.9h      ok
 i386-unknown-freebsd2.1.5    gcc       0.5       ok
 i386-unknown-gnu0.0          gcc       0.5       ok
 i386-unknown-netbsd1.2       gcc       0.9g      ok
-i586-pc-linux-gnu1.3.20      gcc       0.9       ok
-i586-pc-linux-gnu2.0.16      gcc       0.9g      ok
+i586-pc-linux-gnu1.3.20      gcc       1.0       ok
+i586-pc-linux-gnu2.0.16      gcc       1.0       ok
 mips-sgi-irix5.3             cc        0.8       ok
 mips-sgi-irix5.3             gcc       0.8       ok
 mips-sgi-irix6.2             cc -32    0.9       ok
 mips-sgi-irix6.2             cc -n32   0.9       ok
-powerpc-ibm-aix4.1.4.0       xlc       0.9g      ok
-powerpc-ibm-aix4.1.4.0       gcc       0.9g      ok
+mipsel-unknown-openbsd2.1    gcc       1.0       ok
+powerpc-ibm-aix4.1.4.0       xlc       1.0       ok
+powerpc-ibm-aix4.1.4.0       gcc       1.0       ok
 rs6000-ibm-aix3.2.5          xlc       0.9h      ok
 rs6000-ibm-aix3.2.5          gcc       0.9h      ok*
-rs6000-ibm-aix4.1.4.0        xlc       0.9g      ok
-rs6000-ibm-aix4.1.4.0        gcc       0.9e      ok
 sparc-sun-linux2.1.23        gcc       0.9h      ok
-sparc-sun-sunos4.1.3         cc        0.9h      ok
-sparc-sun-sunos4.1.3         gcc       0.9h      ok
+sparc-sun-sunos4.1.4         cc        1.0       ok
+sparc-sun-sunos4.1.4         gcc       1.0       ok
 sparc-sun-solaris2.4         cc        0.9       ok
 sparc-sun-solaris2.4         gcc       0.9       ok
 sparc-sun-solaris2.5         cc        0.9       ok
-sparc-sun-solaris2.5         gcc       0.9h      ok
+sparc-sun-solaris2.5         gcc       1.0       ok
 --------------------------------------------------------
 
 * Libtool will not build shared libraries because of a bug in
