--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
 NEWS - list of user-visible changes between releases of GNU libtool.
 
+New in 1.0a:
+* Bug fixes.
+* Full support for dynamically loaded modules, even on static-only
+  platforms, via a new `-dlopen' link flag.
+* New tests for a BSD-compatible `nm' program, required for dlopened
+  modules.
+* FIXME: Deleted `dlname' mode, now that the internal structure of `.la'
+  files is a public interface.
+
 New in 1.0:
 * Bug fixes.
 * Better configuration test to find the system linker.  The old test
