--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is GNU libtool, a generic library support script.  Libtool hides
-the complexity of using shared libraries behind a consistent
+the complexity of using shared libraries behind a consistent, portable
 interface.
 
 To use libtool, add the new generic library building commands to your
