--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 24 11:04:22 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* demo-exec.test (status): Use status variables so that we try to
+	execute all the programs.
+
 Sat Jul 12 15:38:25 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* demo-exec.test, demo-inst.test: Check the new helldl program,
